--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.0.7"
 pillow = "^10.4.0"
+djangorestframework = "^3.15.2"
+pyyaml = "^6.0.2"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.26.0"
