--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.0.7"
 pillow = "^10.4.0"
 djangorestframework = "^3.15.2"
 pyyaml = "^6.0.2"
+djoser = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.26.0"
