--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pillow = "^10.4.0"
 djangorestframework = "^3.15.2"
 pyyaml = "^6.0.2"
 djoser = "^2.2.3"
+dj-database-url = "^2.2.0"
+psycopg = {extras = ["binary", "pool"], version = "*"} 
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.26.0"
