--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pyyaml = "^6.0.2"
 djoser = "^2.2.3"
 dj-database-url = "^2.2.0"
 psycopg = {extras = ["binary", "pool"], version = "*"} 
+django-extensions = "^3.2.3"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.26.0"
