--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,20 @@
+[tool.black]
+line-length = 140
+target-version = ['py312']
+include = '\.pyi?$'
+exclude = '^.*migrations.*$'
+force-exclude = """
+/(
+    migrations
+)/
+"""
+
+[tool.isort]
+line_length = 140
+profile = "black"
+force_single_line = false
+skip = ["migrations"]
+
 [tool.poetry]
 name = "archetype3"
 version = "0.1.0"
@@ -65,10 +82,6 @@ output-format = "colorized"  # Colored output for better readability in terminal
 
 # Logging configuration
 logging-format-style = "new"  # Use f-string style for logging
-
-
-[tool.black]
-line-length = 120
 
 [build-system]
 requires = ["poetry-core"]
