--- a/apps/users/schema.yaml
+++ b/apps/users/schema.yaml
@@ -1,5 +1,5 @@
 paths:
-  /api/v1/token/login:
+  /api/v1/auth/token/login:
     post:
       operationId: users-login
       tags:
@@ -27,7 +27,7 @@ paths:
           description: ''
         '400':
           description: Wrong credentials
-  /api/v1/users/logout:
+  /api/v1/auth/token/logout:
     post:
       operationId: users-logout
       tags:
@@ -43,7 +43,7 @@ paths:
       responses:
         '204':
           description: No response body
-  /api/v1/users/profile:
+  /api/v1/auth/profile:
     get:
       operationId: users-profile
       tags:
