ops: fixes broken docker file and add whitenoise for static files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ psycopg = {extras = ["binary", "pool"], version = "*"}
 django-extensions = "^3.2.3"
 pytest = "^8.3.3"
 pytest-django = "^4.9.0"
+gunicorn = "^23.0.0"
+whitenoise = "^6.7.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.26.0"
