--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ pytest = "^8.3.3"
 pytest-django = "^4.9.0"
 gunicorn = "^23.0.0"
 whitenoise = "^6.7.0"
+django-environ = "^0.11.2"
+django-cors-headers = "^4.4.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.26.0"
