--- a/compose.yaml
+++ b/compose.yaml
@@ -15,7 +15,7 @@ services:
     build: .
     environment:
       DJANGO_SETTINGS_MODULE: config.settings
-    command: python manage.py runserver 0.0.0.0:80
+    command: python manage.py runserver 0.0.0.0:80 --nostatic
     env_file: ${API_ENV_FILE:-config/.env}
     ports:
       - "8000:80"
