--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ gunicorn = "^23.0.0"
 whitenoise = "^6.7.0"
 django-environ = "^0.11.2"
 django-cors-headers = "^4.4.0"
+django-froala-editor = "^4.2.2"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.26.0"
