--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-django = "^5.0.7"
+django = "^5.1"
 pillow = "^10.4.0"
 djangorestframework = "^3.15.2"
 pyyaml = "^6.0.2"
@@ -39,6 +39,7 @@ whitenoise = "^6.7.0"
 django-environ = "^0.11.2"
 django-cors-headers = "^4.4.0"
 django-froala-editor = "^4.2.2"
+django-taggit = "^6.0.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.26.0"
