--- a/apps/manuscripts/schema.yaml
+++ b/apps/manuscripts/schema.yaml
@@ -1,4 +1,17 @@
 paths:
+  /api/v1/manuscripts/item-parts/:
+    get:
+      operationId: item-part-list
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ItemPart'
+      tags:
+        - manuscripts
   /api/v1/manuscripts/item-parts/{id}/:
     get:
       operationId: item-part-list
@@ -13,17 +26,94 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ItemPart'
+                $ref: '#/components/schemas/ItemPartDetails'
       tags:
         - manuscripts
 components:
   schemas:
+    Repository:
+      type: object
+      properties:
+        name:
+          type: string
+        label:
+          type: string
+        location:
+          type: string
+        url:
+          type: string
+    ItemPartDetails:
+      type: object
+      properties:
+        id:
+          type: integer
+        historical_item:
+          type: object
+          properties:
+            type:
+              type: string
+            format:
+              type: string
+            date:
+              type: string
+            catalogue_numbers:
+              type: array
+              items:
+                type: object
+                properties:
+                  number:
+                    type: string
+                  url:
+                    type: string
+                  catalogue:
+                    type: object
+                    $ref: '#/components/schemas/Repository'
+            descriptions:
+              type: array
+              items:
+                type: object
+                properties:
+                  source:
+                    type: object
+                    $ref: '#/components/schemas/Repository'
+                  content:
+                    type: string
+        current_item:
+          type: object
+          properties:
+            shelfmark:
+              type: string
+            repository:
+              type: object
+              $ref: '#/components/schemas/Repository'
     ItemPart:
       type: object
       properties:
         id:
           type: integer
-        name:
+        type:
           type: string
+        shelfmark:
+          type: string
+        format:
+          type: string
+        language:
+          type: string
+        vernacluar:
+          type: string
+        neumed:
+          type: string
+        hair_type:
+          type: string
+        date:
+          type: string
+        date_sort:
+          type: string
+        issuer:
+          type: string
+        named_beneficiary:
+          type: string
+        repository_id:
+          type: integer
 tags:
   - name: manuscripts
