--- a/apps/manuscripts/schema.yaml
+++ b/apps/manuscripts/schema.yaml
@@ -46,6 +46,49 @@ paths:
                 $ref: '#/components/schemas/ItemPartImage'
       tags:
         - manuscripts
+  /api/v1/search/item-parts/facets:
+    get:
+      operationId: search-item-parts-facets
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  fields: 
+                    type: object
+                    properties:
+                      __facet_name__:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            text:
+                              type: string
+                            count:
+                              type: integer
+                            narrow_url:
+                              type: string
+                  dates:
+                    type: object
+                  queries:
+                    type: object
+                  objects:
+                    type: object
+                    properties:
+                      count:
+                        type: integer
+                      next:
+                        type: string
+                      previous:
+                        type: string
+                      results:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/ItemPartSearchResult'
+      tags:
+        - search
 components:
   schemas:
     Repository:
@@ -59,6 +102,31 @@ components:
           type: string
         url:
           type: string
+    ItemPartSearchResult:
+      type: object
+      properties:
+        repository_name:
+          type: string
+        repository_city:
+          type: string
+        shelfmark:
+          type: string
+        catalogue_numbers:
+          type: array
+          items:
+            type: string
+        date:
+          type: string
+        type:
+          type: string
+        number_of_images:
+          type: integer
+        issuer_name:
+          type: string
+        named_beneficiary:
+          type: string
+        
+        
     ItemPartDetails:
       type: object
       properties:
