ops: adds docker image for SIPI image server

--- a/compose.yaml
+++ b/compose.yaml
@@ -30,6 +30,12 @@ services:
       - .:/src
     depends_on:
       - postgres
-  
+  image_server:
+    image: daschswiss/sipi
+    ports:
+      - 1024:1024
+    volumes:
+      - ./media:/sipi/images
+
 volumes:
   postgres:
