--- a/compose.yaml
+++ b/compose.yaml
@@ -35,7 +35,7 @@ services:
     ports:
       - 1024:1024
     volumes:
-      - ./media:/sipi/images
+      - ./sipi:/sipi/images
 
 volumes:
   postgres:
