--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ django-tinymce = "^4.1.0"
 django-filter = "^24.3"
 django-haystack = {extras = ["elasticsearch"], version = "^3.3.0"}
 drf-haystack = {git = "https://github.com/rhblind/drf-haystack"}
+django-admin-ordering = "^0.19.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.26.0"
