--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ drf-haystack = {git = "https://github.com/rhblind/drf-haystack"}
 djiiif = "^0.22"
 django-admin-ordering = "^0.19.0"
 django-nested-admin = "^4.1.1"
+django-admin-interface = "^0.29.1"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.26.0"
