--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,6 @@ gunicorn = "^23.0.0"
 whitenoise = "^6.7.0"
 django-environ = "^0.11.2"
 django-cors-headers = "^4.4.0"
-django-taggit = "^6.0.0"
 django-tinymce = "^4.1.0"
 django-filter = "^24.3"
 django-haystack = {extras = ["elasticsearch"], version = "^3.3.0"}
@@ -46,6 +45,7 @@ drf-haystack = {git = "https://github.com/rhblind/drf-haystack"}
 djiiif = "^0.22"
 django-admin-ordering = "^0.19.0"
 django-nested-admin = "^4.1.1"
+django-tagulous = "^2.1.0"
 django-admin-interface = "^0.29.1"
 
 [tool.poetry.group.dev.dependencies]
