feat: switch back to django users with a username field

--- a/apps/users/schema.yaml
+++ b/apps/users/schema.yaml
@@ -10,7 +10,7 @@ paths:
             schema:
               type: object
               properties:
-                email:
+                username:
                   type: string
                 password:
                   type: string
@@ -66,6 +66,8 @@ components:
       type: object
       properties:
         id: 
+          type: string
+        username:
           type: string
         email:
           type: string
