--- a/config/test.env
+++ b/config/test.env
@@ -3,3 +3,8 @@ DEBUG=true
 
 # Database
 DATABASE_URL="postgresql://postgres:password@postgres:5432/local"
+
+# CORS and Hosts
+ALLOWED_HOSTS=localhost
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
+CSRF_TRUSTED_ORIGINS=http://localhost:3000,http://localhost:8000
