refactor: restructure models within apps

--- a/apps/symbols_structure/schema.yaml
+++ b/apps/symbols_structure/schema.yaml
@@ -1,7 +1,7 @@
 paths:
-  /api/v1/handwriting/characters/{id}/:
+  /api/v1/symbols_structure/characters/{id}/:
     get:
-      operationId: scribes-list
+      operationId: characters-detail
       parameters:
         - name: id
           in: path
@@ -15,7 +15,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Character'
       tags:
-        - handwriting
+        - Symbols Structure
 components:
   schemas:
     Character:
@@ -26,4 +26,4 @@ components:
         name:
           type: string
 tags:
-  - name: handwriting
+  - name: Symbols Structure
