feat: adds complete test and feature set for annotations API

--- a/apps/annotations/schema.yaml
+++ b/apps/annotations/schema.yaml
@@ -51,7 +51,7 @@ components:
           type: integer
         hand:
           type: integer
-        components:
+        graphcomponent_set:
           type: array
           items:
             type: object
