feat: adds allographs API

--- a/apps/symbols_structure/schema.yaml
+++ b/apps/symbols_structure/schema.yaml
@@ -16,6 +16,19 @@ paths:
                 $ref: '#/components/schemas/Character'
       tags:
         - Symbols Structure
+  /api/v1/symbols_structure/allographs/:
+    get:
+      operationId: allographs-list
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Allograph'
+      tags:
+        - Symbols Structure
 components:
   schemas:
     Character:
@@ -25,5 +38,35 @@ components:
           type: integer
         name:
           type: string
+    Allograph:
+      type: object
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        components:
+          type: array
+          items:
+            type: object
+            properties:
+              component:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  name:
+                    type: string
+              features:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id: 
+                      type: integer
+                    name:
+                      type: string
+                    set_by_default:
+                      type: boolean
 tags:
   - name: Symbols Structure
