deps: updates lib versions and add --no-root to not install project as library

--- a/.github/workflows/ci-tests-and-checks.yml
+++ b/.github/workflows/ci-tests-and-checks.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install poetry
-          poetry install --no-interaction --no-ansi -vvv
+          poetry install --no-interaction --no-ansi --no-root -vvv
 
       - name: Run Lint
         run: |
