refactor: uses new organization name after migrating github repository

--- a/.github/workflows/cd-backend.yml
+++ b/.github/workflows/cd-backend.yml
@@ -41,4 +41,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/lanterno/archetype3:latest
+          tags: ghcr.io/archetype-pal/archetype3:latest
